# gradsflow-automl

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  sonar-project.properties
.github/: CODEOWNERS  FUNDING.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  colab_badge.yml  latest-changes.yml  latest-changes.yml.off  main.yml  mkdocs_ci.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release-notes.jinja2  welcome.yml
404/: index.html
CHANGELOG/: index.html
docs/: 404.md  CHANGELOG.md  CNAME  index.md  requirements.txt
docs/gradsflow/: autoclassifier.md  automodel.md  autotasks.md  callbacks.md  core.md  data.md  model.md  models.md  tasks.md  tuner.md  utility.md
docs/gradsflow/autotasks/: autonlp.md  autotasks.md  classification.md  engine.md
docs/gradsflow/models/: base.md  model.md  tracker.md  utils.md
docs/overrides/: main.html
examples/: autoclassifier.py
examples/nbs/: 01-AutoImageClassification.ipynb  01-ImageClassification.ipynb  02-AutoTextClassification.ipynb  02-TextClassification.ipynb  03-TextSummarization.ipynb  03_TextSummarization.ipynb  04-RayDataset.ipynb  05-model.fit.ipynb  05-model_fit.ipynb  06-AutoModel_fit().ipynb  06-AutoModel_fit.ipynb  2021-10-3-huggingface-training.ipynb  Pix2Pix_explained_with_code.ipynb  huggingface-training.ipynb  playground.ipynb
examples/nbs/01-ImageClassification/: index.html
examples/nbs/02-TextClassification/: index.html
examples/nbs/03-TextSummarization/: index.html
examples/nbs/04-RayDataset/: index.html
examples/nbs/05-model_fit/: index.html
examples/nbs/06-AutoModel_fit/: index.html
examples/nbs/2021-10-3-huggingface-training/: index.html
examples/nbs/Pix2Pix_explained_with_code/: index.html
examples/src/models/: hello_world.py
examples/src/tasks/: image_classifier.py  text_classification.py
gradsflow/: __init__.py  logging.py
gradsflow/autoclassifier/: __init__.py  base.py  image.py  summarisation.py  summarization.py  text.py
gradsflow/automodel/: __init__.py  automodel.py
gradsflow/autotasks/: __init__.py  autosummarization.py  autotasks.py
gradsflow/autotasks/autoclassification/: image.py  text.py
gradsflow/autotasks/engine/: autoclassifier.py  automodel.py  backend.py
gradsflow/callbacks/: __init__.py  base.py  callbacks.py  comet.py  export.py  gpu.py  index.html  logger.py  progress.py  raytune.py  runner.py  tensorboard.py  training.py  wandb.py
gradsflow/callbacks/logger/: __init__.py  comet.py  logger.py  wandb.py
gradsflow/cli/: main.py  training.py
gradsflow/core/: __init__.py  autoclassifier.py  autodata.py  automodel.py  autotrainer.py  backend.py  base.py  callbacks.py  classifier.py  data.py  index.html  metrics.py  model.py
gradsflow/data/: __init__.py  autodata.py  base.py  common.py  image.py  index.html  mixins.py  ray_dataset.py
gradsflow/model/: __init__.py  base.py  model.py  tracker.py
gradsflow/models/: __init__.py  base.py  constants.py  exceptions.py  model.py  tracker.py  utils.py
gradsflow/tasks/: __init__.py  autosummarization.py  autotasks.py  index.html
gradsflow/tuner/: __init__.py  automodel.py  index.html  tuner.py
gradsflow/utility/: __init__.py  common.py  data.py  imports.py  index.html  optuna.py
gradsflow/workflow/: __init__.py
overrides/: main.html
tests/: __init__.py  __main__.py  conftest.py  dummies.py  test_automodel.py
tests/autoclassifier/: test_image.py  test_sum.py  test_summarization.py  test_text.py
tests/automodel/: test_automodel.py
tests/autotasks/: test_autotasks.py  test_autotrainer.py  test_core_automodel.py  test_image.py  test_summarization.py  test_text.py
tests/callbacks/: test_logger.py  test_runner.py  test_wandb.py
tests/core/: test_autodata.py  test_automodel.py  test_autotrainer.py  test_base.py  test_model.py
tests/data/: __init__.py  test_autodata.py  test_common.py  test_image.py  test_image_data.py  test_mixins.py  test_ray_dataset.py
tests/model/: test_model.py
tests/models/: test_exceptions.py  test_model.py  test_tracker.py  test_utils.py
tests/tasks/: test_auto.py  test_autotasks.py  test_autotrainer.py  test_core_automodel.py  test_image.py  test_summarization.py  test_text.py
tests/tuner/: test_automodel.py  test_tuner.py
tests/utility/: test_common.py  test_data.py  test_utility.py
tests/workflow/: test_data.py
(+17 files in other folders)
