[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "gradsflow"
author = "Aniket Maurya"
author-email = "aniket@gradsflow.com"
home-page = "https://github.com/gradsflow/gradsflow"
description-file = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.7"
requires = [
    "smart_open>=5.1",
    "lightning-flash[image,text]==0.5.0",
    "ray[default,tune]>=1.6",
]

[tool.flit.metadata.urls]
Documentation = "https://docs.gradsflow.com"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "coverage",
]

[tool.isort]
profile = "black"
