[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"


[tool.isort]
profile = "black"

[tool.black]
line_length = 120


[tool.pytest.ini_options]
#filterwarnings = [
#  "ignore::DeprecationWarning",
#  "ignore::UserWarning"
#]
norecursedirs = ["tests/autotasks", "tests/tuner", "tests/*/*ray*"]
