[metadata]
name = gradsflow
version = attr: gradsflow.__version__
author = Aniket Maurya
author_email = aniket@gradsflow.com
description = An open-source AutoML Library based on PyTorch
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/gradsflow/gradsflow
project_urls =
    Bug Tracker = https://github.com/gradsflow/gradsflow/issues
    Documentation = https://docs.gradsflow.com
    Source Code = https://github.com/gradsflow/gradsflow

classifiers =
;    How mature is this project? Common values are
;    3 - Alpha, 4 - Beta, 5 - Production/Stable
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

keywords = AutoML, Pytorch, Deep Learning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch >=1.4
    torchvision
    ray[default,tune] >=1.8.0
    timm
    accelerate >=0.5.0
    smart_open >=5.1,<=5.2.1
    rich
    loguru >=0.5
    torchmetrics >=0.5.0

[options.extras_require]
dev = lightning-flash[image,text] >=0.5.1; codecarbon >=1.2.0; comet_ml; wandb
test = pytest; coverage; pytest-sugar

[options.packages.find] #optional
exclude=tests, docs, examples
